# qr_code_web

./: pyproject.toml  qr.py
